--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
-  "compilerOptions": {
-    "target": "es5",
+    "compilerOptions": {
+	      "typeRoots": ["./src/types"],
+      "target": "es5",
+
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+	"esnext"
     ],
     "allowJs": true,
     "skipLibCheck": true,
